cmake_minimum_required(VERSION 3.16)
project(acwing)

set(CMAKE_CXX_STANDARD 11)

add_executable(acwing main.cpp)
add_executable(acwing2 test.c)

add_executable(winterWeek01Day03 winter/week01/day03/main.cpp)
add_executable(winterWeek01Day04 winter/week01/day04/main.cpp)
add_executable(winterWeek01Day05 winter/week01/day05/main.cpp)

add_executable(winterWeek02Day01 winter/week02/day01/main.cpp)
add_executable(winterWeek02Day02 winter/week02/day02/main.cpp)
add_executable(winterWeek02Day03 winter/week02/day03/main.cpp)
add_executable(winterWeek02Day04 winter/week02/day04/main.cpp)
add_executable(winterWeek02Day05 winter/week02/day05/main.cpp)

add_executable(winterWeek03Day01 winter/week03/day01/main.cpp)
add_executable(winterWeek03Day02 winter/week03/day02/main.cpp)
add_executable(winterWeek03Day03 winter/week03/day03/main.cpp)
add_executable(winterWeek03Day04 winter/week03/day04/main.cpp)
add_executable(winterWeek03Day05 winter/week03/day05/main.cpp)

add_executable(winterWeek04Day01 winter/week04/day01/main.cpp)
add_executable(winterWeek04Day02 winter/week04/day02/main.cpp)
add_executable(winterWeek04Day03 winter/week04/day03/main.cpp)
add_executable(winterWeek04Day04 winter/week04/day04/main.cpp)
add_executable(winterWeek04Day05 winter/week04/day05/main.cpp)

add_executable(bridgeWeek01Day01 bridge/week01/day01/main.cpp)
add_executable(bridgeWeek01Day02 bridge/week01/day02/main.cpp)
add_executable(bridgeWeek01Day03 bridge/week01/day03/main.cpp)
add_executable(bridgeWeek01Day04 bridge/week01/day04/main.cpp)
add_executable(bridgeWeek01Day05 bridge/week01/day05/main.cpp)

add_executable(bridgeWeek02Day01 bridge/week02/day01/main.cpp)
add_executable(bridgeWeek02Day02 bridge/week02/day02/main.cpp)
add_executable(bridgeWeek02Day03 bridge/week02/day03/main.cpp)
add_executable(bridgeWeek02Day04 bridge/week02/day04/main.cpp)
add_executable(bridgeWeek02Day05 bridge/week02/day05/main.cpp)



add_executable(basicClass01quicksort basic/class01/knumber/main.cpp)
add_executable(basicClass01knumber basic/class01/quicksort/main.cpp)
add_executable(basicClass01mergesort basic/class01/mergesort/main.cpp)
add_executable(basicClass01numberrange basic/class01/numberrange/main.cpp)
add_executable(basicClass01reversepair basic/class01/reversepair/main.cpp)
add_executable(basicClass01threeroot basic/class01/threeroot/main.cpp)
add_executable(basicClass01highPrecisionAdd basic/class01/highPrecisionAdd/main.cpp)
add_executable(basicClass01highPrecisionSub basic/class01/highPrecisionSub/main.cpp)
add_executable(basicClass01highPrecisionMul basic/class01/highPrecisionMul/main.cpp)
add_executable(basicClass01highPrecisionDiv basic/class01/highPrecisionDiv/main.cpp)


add_executable(basicClass03BFS basic/class03/BFS/maze.cpp)
add_executable(basicClass03BFS2  basic/class03/BFS/eightNumber.cpp)
add_executable(basicClass03TreeGraph1  basic/class03/TreeGraph/treeWeight.cpp)
add_executable(basicClass03TreeGraph2  basic/class03/TreeGraph/graphLevel.cpp)
add_executable(basicClass03Topology  basic/class03/Topology/main.cpp)
add_executable(basicClass03Dijkstra1  basic/class03/Dijkstra/main1.cpp)
add_executable(basicClass03Dijkstra2  basic/class03/Dijkstra/main2.cpp)
add_executable(basicClass03bellman-ford  basic/class03/bellman-ford/main.cpp)
add_executable(basicClass03spfa1  basic/class03/spfa/main1.cpp)
add_executable(basicClass03spfa2  basic/class03/spfa/main2.cpp)
add_executable(basicClass03floyd  basic/class03/Floyd/main.cpp)
add_executable(basicClass03prim  basic/class03/Prim/main.cpp)
add_executable(basicClass03Kruskal  basic/class03/Kruskal/main.cpp)
add_executable(basicClass03colorGraph  basic/class03/colorGraph/main.cpp)
add_executable(basicClass03Hungary  basic/class03/Hungary/main.cpp)

add_executable(basicClass04judgePrime  basic/class04/prime/judgePrime.cpp)
add_executable(basicClass04splitPrime  basic/class04/prime/split.cpp)
add_executable(basicClass04siftPrim  basic/class04/prime/sift.cpp)

add_executable(basicClass04ApproximateJudge  basic/class04/approximate/judge.cpp)
add_executable(basicClass04ApproximateMax  basic/class04/approximate/max.cpp)
add_executable(basicClass04ApproximateNum  basic/class04/approximate/num.cpp)
add_executable(basicClass04ApproximateSum  basic/class04/approximate/sum.cpp)
add_executable(basicClass04EulerFunction  basic/class04/Euler/function.cpp)
add_executable(basicClass04qpow  basic/class04/qpow/main.cpp)

add_executable(basicClass05bag01  basic/class05/bag/commonBag.cpp)
add_executable(basicClass05bag02  basic/class05/bag/groupBag.cpp)
add_executable(basicClass05bag03  basic/class05/bag/manyBag.cpp)
add_executable(basicClass05bag04  basic/class05/bag/manyBag2.cpp)
add_executable(basicClass05bag05  basic/class05/bag/wholeBag.cpp)

add_executable(basicClass05linear01  basic/class05/linear/commonSeq.cpp)
add_executable(basicClass05linear02  basic/class05/linear/editDis.cpp)
add_executable(basicClass05linear03  basic/class05/linear/minEditDis.cpp)
add_executable(basicClass05linear04  basic/class05/linear/triangle.cpp)
add_executable(basicClass05linear05  basic/class05/linear/upperSeq01.cpp)
add_executable(basicClass05linear06  basic/class05/linear/upperSeq02.cpp)

add_executable(basicClass05range  basic/class05/range/main.cpp)
add_executable(basicClass05count  basic/class05/count/main.cpp)
add_executable(basicClass05bitcount  basic/class05/bitCount/main.cpp)
add_executable(basicClass05compress01  basic/class05/stateCompress/mende.cpp)
add_executable(basicClass05compress02  basic/class05/stateCompress/Hamilton.cpp)
add_executable(basicClass05tree  basic/class05/tree/main.cpp)
add_executable(basicClass05memory  basic/class05/memorySearch/main.cpp)
