cmake_minimum_required(VERSION 3.16)
project(acwing)

set(CMAKE_CXX_STANDARD 11)

add_executable(acwing main.cpp)
add_executable(acwing2 test.c)

# LeetCode题目练习
add_executable(LeetCode27 leetcode/array/leetcode27.cpp)
add_executable(LeetCode59 leetcode/array/leetcode59.cpp)
add_executable(LeetCode55 leetcode/dp/leetcode55.cpp)
add_executable(LeetCode188 leetcode/dp/leetcode188.cpp)

# 在线笔试
add_executable(huaweimock0426A MachineTest/huawei0426/A.cpp)
add_executable(huaweimock0426B MachineTest/huawei0426/B.cpp)
add_executable(huaweimock0426C MachineTest/huawei0426/C.cpp)

add_executable(huaweimock01A MachineTest/huaweiMock01/A.cpp)
add_executable(huaweimock01B MachineTest/huaweiMock01/B.cpp)
add_executable(huaweimock01C MachineTest/huaweiMock01/C.cpp)

add_executable(alibabaMock0101 MachineTest/alibabaMock01/1.cpp)
add_executable(alibabaMock0102 MachineTest/alibabaMock01/2.cpp)
add_executable(alibabaMock0103 MachineTest/alibabaMock01/3.cpp)
add_executable(alibabaMock0104 MachineTest/alibabaMock01/4.cpp)
add_executable(alibabaMock0105 MachineTest/alibabaMock01/5.cpp)
add_executable(alibabaMock0106 MachineTest/alibabaMock01/6.cpp)
add_executable(alibabaMock0107 MachineTest/alibabaMock01/7.cpp)
add_executable(alibabaMock0108 MachineTest/alibabaMock01/8.cpp)
add_executable(alibabaMock0109 MachineTest/alibabaMock01/9.cpp)
add_executable(alibabaMock0110 MachineTest/alibabaMock01/10.cpp)

add_executable(meituan0415A MachineTest/meituan0415/A.cpp)
add_executable(meituan0415B MachineTest/meituan0415/B.cpp)
add_executable(meituan0415C MachineTest/meituan0415/C.cpp)
add_executable(meituan0415D MachineTest/meituan0415/D.cpp)
add_executable(meituan0415E MachineTest/meituan0415/E.cpp)

add_executable(meituan0408A MachineTest/meituan0408/A.cpp)
add_executable(meituan0408B MachineTest/meituan0408/B.cpp)
add_executable(meituan0408C MachineTest/meituan0408/C.cpp)
add_executable(meituan0408D MachineTest/meituan0408/D.cpp)
add_executable(meituan0408E MachineTest/meituan0408/E.cpp)

add_executable(redbook0423A MachineTest/redbook0423/A.cpp)
add_executable(redbook0423B MachineTest/redbook0423/B.cpp)
add_executable(redbook0423C MachineTest/redbook0423/C.cpp)
add_executable(redbook0423D MachineTest/redbook0423/D.cpp)
add_executable(redbook0423E MachineTest/redbook0423/E.cpp)

# PAT题目练习
add_executable(PAT1002 PAT/1002A+BforPolynomials/main.cpp)
add_executable(PAT1003 PAT/1003Emergency/main.cpp)
add_executable(PAT1004 PAT/1004CountingLeaves/main.cpp)
add_executable(PAT1005 PAT/1005SpellitRight/main.cpp)
add_executable(PAT1006 PAT/1006SignInAndSignOut/main.cpp)
add_executable(PAT1007 PAT/1007MaximumSubsequenceSum/main.cpp)
add_executable(PAT1008 PAT/1008Elevator/main.cpp)
add_executable(PAT1009 PAT/1009ProductOfPolynomials/main.cpp)
add_executable(PAT1010 PAT/1010Radix/main.cpp)

add_executable(PAT1011 PAT/1011WorldCupBetting/main.cpp)
add_executable(PAT1012 PAT/1012TheBestRank/main.cpp)
add_executable(PAT1013 PAT/1013BattleOverCities/main.cpp)
add_executable(PAT1014 PAT/1014WaitingInLine/main.cpp)
add_executable(PAT1015 PAT/1015ReversiblePrimes/main.cpp)
add_executable(PAT1016 PAT/1016PhoneBills/main.cpp)
add_executable(PAT1017 PAT/1017QueueingAtBank/main.cpp)
add_executable(PAT1018 PAT/1018PublicBikeManagement/main.cpp)
add_executable(PAT1019 PAT/1019GeneralPalindromicNumber/main.cpp)
add_executable(PAT1020 PAT/1020TreeTraversals/main.cpp)

add_executable(PAT1021 PAT/1021DeepestRoot/main.cpp)
add_executable(PAT1022 PAT/1022DigitalLibrary/main.cpp)
add_executable(PAT1023 PAT/1023HaveFunWithNumbers/main.cpp)
add_executable(PAT1024 PAT/1024PalindromicNumber/main.cpp)
add_executable(PAT1025 PAT/1025PATRanking/main.cpp)
add_executable(PAT1026 PAT/1026TableTennis/main.cpp)
add_executable(PAT1027 PAT/1027ColorsInMars/main.cpp)
add_executable(PAT1028 PAT/1028ListSorting/main.cpp)
add_executable(PAT1029 PAT/1029Median/main.cpp)
add_executable(PAT1030 PAT/1030TravelPlan/main.cpp)

# 常用代码模板
add_executable(SegmentTree templates/SegmentTree/main.cpp)
add_executable(TreeArray templates/TreeArray/main.cpp)
add_executable(TreeArrayV2 templates/TreeArray/mainv2.cpp)
add_executable(RBTree templates/RBTree/main.cpp)

# 寒假每日一题
add_executable(winterWeek01Day03 winter/week01/day03/main.cpp)
add_executable(winterWeek01Day04 winter/week01/day04/main.cpp)
add_executable(winterWeek01Day05 winter/week01/day05/main.cpp)

add_executable(winterWeek02Day01 winter/week02/day01/main.cpp)
add_executable(winterWeek02Day02 winter/week02/day02/main.cpp)
add_executable(winterWeek02Day03 winter/week02/day03/main.cpp)
add_executable(winterWeek02Day04 winter/week02/day04/main.cpp)
add_executable(winterWeek02Day05 winter/week02/day05/main.cpp)

add_executable(winterWeek03Day01 winter/week03/day01/main.cpp)
add_executable(winterWeek03Day02 winter/week03/day02/main.cpp)
add_executable(winterWeek03Day03 winter/week03/day03/main.cpp)
add_executable(winterWeek03Day04 winter/week03/day04/main.cpp)
add_executable(winterWeek03Day05 winter/week03/day05/main.cpp)

add_executable(winterWeek04Day01 winter/week04/day01/main.cpp)
add_executable(winterWeek04Day02 winter/week04/day02/main.cpp)
add_executable(winterWeek04Day03 winter/week04/day03/main.cpp)
add_executable(winterWeek04Day04 winter/week04/day04/main.cpp)
add_executable(winterWeek04Day05 winter/week04/day05/main.cpp)

# 蓝桥杯每日一题
add_executable(bridgeWeek01Day01 bridge/week01/day01/main.cpp)
add_executable(bridgeWeek01Day02 bridge/week01/day02/main.cpp)
add_executable(bridgeWeek01Day03 bridge/week01/day03/main.cpp)
add_executable(bridgeWeek01Day04 bridge/week01/day04/main.cpp)
add_executable(bridgeWeek01Day05 bridge/week01/day05/main.cpp)

add_executable(bridgeWeek02Day01 bridge/week02/day01/main.cpp)
add_executable(bridgeWeek02Day02 bridge/week02/day02/main.cpp)
add_executable(bridgeWeek02Day03 bridge/week02/day03/main.cpp)
add_executable(bridgeWeek02Day04 bridge/week02/day04/main.cpp)
add_executable(bridgeWeek02Day05 bridge/week02/day05/main.cpp)

add_executable(bridgeWeek03Day01 bridge/week03/day01/main.cpp)
add_executable(bridgeWeek03Day02 bridge/week03/day02/main.cpp)
add_executable(bridgeWeek03Day03 bridge/week03/day03/main.cpp)
add_executable(bridgeWeek03Day04 bridge/week03/day04/main.cpp)
add_executable(bridgeWeek03Day05 bridge/week03/day05/main.cpp)

add_executable(bridgeWeek04Day01 bridge/week04/day01/main.cpp)
add_executable(bridgeWeek04Day02 bridge/week04/day02/main.cpp)
add_executable(bridgeWeek04Day03 bridge/week04/day03/main.cpp)
add_executable(bridgeWeek04Day04 bridge/week04/day04/main.cpp)
add_executable(bridgeWeek04Day05 bridge/week04/day05/main.cpp)

add_executable(bridgeWeek05Day01 bridge/week05/day01/main.cpp)
add_executable(bridgeWeek05Day02 bridge/week05/day02/main.cpp)
add_executable(bridgeWeek05Day03 bridge/week05/day03/main.cpp)
add_executable(bridgeWeek05Day04 bridge/week05/day04/main.cpp)
add_executable(bridgeWeek05Day05 bridge/week05/day05/main.cpp)

add_executable(bridgeWeek06Day0101 bridge/week06/day01/IntegerSplit.cpp)
add_executable(bridgeWeek06Day0102 bridge/week06/day01/01bag.cpp)
add_executable(bridgeWeek06Day0103 bridge/week06/day01/manybag.cpp)
add_executable(bridgeWeek06Day0104 bridge/week06/day01/wholebag.cpp)
add_executable(bridgeWeek06Day0105 bridge/week06/day01/groupbag.cpp)

add_executable(bridgeWeek06Day02 bridge/week06/day02/main.cpp)
add_executable(bridgeWeek06Day03 bridge/week06/day03/main.cpp)
add_executable(bridgeWeek06Day04 bridge/week06/day04/main.cpp)
add_executable(bridgeWeek06Day05 bridge/week06/day05/main.cpp)

# 春季每日一题
add_executable(springWeek01Day01 spring/week01/day01/main.cpp)
add_executable(springWeek01Day02 spring/week01/day02/main.cpp)
add_executable(springWeek01Day03 spring/week01/day03/main.cpp)
add_executable(springWeek01Day04 spring/week01/day04/main.cpp)
add_executable(springWeek01Day05 spring/week01/day05/main.cpp)

# 牛客101

# CSP
add_executable(CSP2023-3-19binary CSP/2023-3-19/binary.cpp)
add_executable(CSP2023-3-19tree CSP/2023-3-19/tree.cpp)

add_executable(CSP2023-03-1 CSP/2023-03/1.cpp)
add_executable(CSP2023-03-2 CSP/2023-03/2.cpp)
add_executable(CSP2023-03-3 CSP/2023-03/3.cpp)
add_executable(CSP2023-03-4 CSP/2023-03/4.cpp)
add_executable(CSP2023-03-5 CSP/2023-03/5.cpp)

add_executable(CSP2022-12-1 CSP/2022-12/1.cpp)
add_executable(CSP2022-12-2 CSP/2022-12/2.cpp)
add_executable(CSP2022-12-3 CSP/2022-12/3.cpp)
add_executable(CSP2022-12-4 CSP/2022-12/4.cpp)
add_executable(CSP2022-12-5 CSP/2022-12/5.cpp)

add_executable(CSP2022-09-1 CSP/2022-09/1.cpp)
add_executable(CSP2022-09-2 CSP/2022-09/2.cpp)
add_executable(CSP2022-09-3 CSP/2022-09/3.cpp)
add_executable(CSP2022-09-4 CSP/2022-09/4.cpp)
add_executable(CSP2022-09-5 CSP/2022-09/5.cpp)

add_executable(CSP2022-06-1 CSP/2022-06/1.cpp)
add_executable(CSP2022-06-2 CSP/2022-06/2.cpp)
add_executable(CSP2022-06-3 CSP/2022-06/3.cpp)
add_executable(CSP2022-06-4 CSP/2022-06/4.cpp)
add_executable(CSP2022-06-5 CSP/2022-06/5.cpp)

add_executable(CSP2022-03-1 CSP/2022-03/1.cpp)
add_executable(CSP2022-03-2 CSP/2022-03/2.cpp)
add_executable(CSP2022-03-3 CSP/2022-03/3.cpp)
add_executable(CSP2022-03-4 CSP/2022-03/4.cpp)
add_executable(CSP2022-03-4AC CSP/2022-03/4AC.cpp)
add_executable(CSP2022-03-5 CSP/2022-03/5.cpp)

add_executable(CSP2021-09-1 CSP/2021-09/1.cpp)
add_executable(CSP2021-09-2 CSP/2021-09/2.cpp)
add_executable(CSP2021-09-3 CSP/2021-09/3.cpp)
add_executable(CSP2021-09-4 CSP/2021-09/4.cpp)
add_executable(CSP2021-09-5 CSP/2021-09/5.cpp)

add_executable(CSP2021-12-1 CSP/2021-12/1.cpp)
add_executable(CSP2021-12-2 CSP/2021-12/2.cpp)
add_executable(CSP2021-12-3 CSP/2021-12/3.cpp)
add_executable(CSP2021-12-4 CSP/2021-12/4.cpp)
add_executable(CSP2021-12-4AC CSP/2021-12/4AC.cpp)
add_executable(CSP2021-12-5 CSP/2021-12/5.cpp)

add_executable(CSP2021-04-1 CSP/2021-04/1.cpp)
add_executable(CSP2021-04-2 CSP/2021-04/2.cpp)
add_executable(CSP2021-04-3 CSP/2021-04/3.cpp)
add_executable(CSP2021-04-4 CSP/2021-04/4.cpp)
add_executable(CSP2021-04-5 CSP/2021-04/5.cpp)

add_executable(CSP2020-12-1 CSP/2020-12/1.cpp)
add_executable(CSP2020-12-2 CSP/2020-12/2.cpp)
add_executable(CSP2020-12-3 CSP/2020-12/3.cpp)
add_executable(CSP2020-12-4 CSP/2020-12/4.cpp)
add_executable(CSP2020-12-5 CSP/2020-12/5.cpp)

add_executable(CSP2020-09-1 CSP/2020-09/1.cpp)
add_executable(CSP2020-09-2 CSP/2020-09/2.cpp)
add_executable(CSP2020-09-3 CSP/2020-09/3.cpp)
add_executable(CSP2020-09-4 CSP/2020-09/4.cpp)
add_executable(CSP2020-09-5 CSP/2020-09/5.cpp)

add_executable(CSP2020-06-1 CSP/2020-06/1.cpp)
add_executable(CSP2020-06-2 CSP/2020-06/2.cpp)
add_executable(CSP2020-06-3 CSP/2020-06/3.cpp)
add_executable(CSP2020-06-4 CSP/2020-06/4.cpp)
add_executable(CSP2020-06-5 CSP/2020-06/5.cpp)

# acwing算法提高课
add_executable(enhanceClass04SegmentTree01 enhance/class04/SegmentTree/max.cpp)
add_executable(enhanceClass04SegmentTree02 enhance/class04/SegmentTree/MaintainSeq/main.cpp)

# acwing算法基础课
add_executable(basicClass01quicksort basic/class01/knumber/main.cpp)
add_executable(basicClass01knumber basic/class01/quicksort/main.cpp)
add_executable(basicClass01mergesort basic/class01/mergesort/main.cpp)
add_executable(basicClass01numberrange basic/class01/numberrange/main.cpp)
add_executable(basicClass01reversepair basic/class01/reversepair/main.cpp)
add_executable(basicClass01threeroot basic/class01/threeroot/main.cpp)
add_executable(basicClass01highPrecisionAdd basic/class01/highPrecisionAdd/main.cpp)
add_executable(basicClass01highPrecisionSub basic/class01/highPrecisionSub/main.cpp)
add_executable(basicClass01highPrecisionMul basic/class01/highPrecisionMul/main.cpp)
add_executable(basicClass01highPrecisionDiv basic/class01/highPrecisionDiv/main.cpp)

add_executable(basicClass03BFS basic/class03/BFS/maze.cpp)
add_executable(basicClass03BFS2 basic/class03/BFS/eightNumber.cpp)
add_executable(basicClass03TreeGraph1 basic/class03/TreeGraph/treeWeight.cpp)
add_executable(basicClass03TreeGraph2 basic/class03/TreeGraph/graphLevel.cpp)
add_executable(basicClass03Topology basic/class03/Topology/main.cpp)
add_executable(basicClass03Dijkstra1 basic/class03/Dijkstra/main1.cpp)
add_executable(basicClass03Dijkstra2 basic/class03/Dijkstra/main2.cpp)
add_executable(basicClass03bellman-ford basic/class03/bellman-ford/main.cpp)
add_executable(basicClass03spfa1 basic/class03/spfa/main1.cpp)
add_executable(basicClass03spfa2 basic/class03/spfa/main2.cpp)
add_executable(basicClass03floyd basic/class03/Floyd/main.cpp)
add_executable(basicClass03prim basic/class03/Prim/main.cpp)
add_executable(basicClass03Kruskal basic/class03/Kruskal/main.cpp)
add_executable(basicClass03colorGraph basic/class03/colorGraph/main.cpp)
add_executable(basicClass03Hungary basic/class03/Hungary/main.cpp)

add_executable(basicClass04judgePrime basic/class04/prime/judgePrime.cpp)
add_executable(basicClass04splitPrime basic/class04/prime/split.cpp)
add_executable(basicClass04siftPrim basic/class04/prime/sift.cpp)

add_executable(basicClass04ApproximateJudge basic/class04/approximate/judge.cpp)
add_executable(basicClass04ApproximateMax basic/class04/approximate/max.cpp)
add_executable(basicClass04ApproximateNum basic/class04/approximate/num.cpp)
add_executable(basicClass04ApproximateSum basic/class04/approximate/sum.cpp)
add_executable(basicClass04EulerFunction basic/class04/Euler/function.cpp)
add_executable(basicClass04qpow basic/class04/qpow/main.cpp)

add_executable(basicClass05bag01 basic/class05/bag/commonBag.cpp)
add_executable(basicClass05bag02 basic/class05/bag/groupBag.cpp)
add_executable(basicClass05bag03 basic/class05/bag/manyBag.cpp)
add_executable(basicClass05bag04 basic/class05/bag/manyBag2.cpp)
add_executable(basicClass05bag05 basic/class05/bag/wholeBag.cpp)

add_executable(basicClass05linear01 basic/class05/linear/commonSeq.cpp)
add_executable(basicClass05linear02 basic/class05/linear/editDis.cpp)
add_executable(basicClass05linear03 basic/class05/linear/minEditDis.cpp)
add_executable(basicClass05linear04 basic/class05/linear/triangle.cpp)
add_executable(basicClass05linear05 basic/class05/linear/upperSeq01.cpp)
add_executable(basicClass05linear06 basic/class05/linear/upperSeq02.cpp)

add_executable(basicClass05range basic/class05/range/main.cpp)
add_executable(basicClass05count basic/class05/count/main.cpp)
add_executable(basicClass05bitcount basic/class05/bitCount/main.cpp)
add_executable(basicClass05compress01 basic/class05/stateCompress/mende.cpp)
add_executable(basicClass05compress02 basic/class05/stateCompress/Hamilton.cpp)
add_executable(basicClass05tree basic/class05/tree/main.cpp)
add_executable(basicClass05memory basic/class05/memorySearch/main.cpp)